--- a/Android/res/layout/user_list_item.xml
+++ b/Android/res/layout/user_list_item.xml
@@ -3,97 +3,101 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginBottom="4dp"
-    android:background="#FFFFFF"
-    android:gravity="center_vertical" >
-
-    <com.facebook.widget.ProfilePictureView
-        android:id="@+id/user_img"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_alignParentLeft="true"
-        android:src="@drawable/ic_user" />
+    android:background="#FFFFFF" >
 
     <LinearLayout
-        android:id="@+id/left_side_user_item"
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/user_img"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/user_item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="4dp"
-            android:text="User Name, Age"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <com.facebook.widget.ProfilePictureView
+            android:id="@+id/user_img"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_user" />
 
-        <GridLayout
+        <LinearLayout
+            android:id="@+id/left_side_user_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:columnCount="2"
-            android:rowCount="3" >
-
-            <ImageView
-                android:id="@+id/detail_image0"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_column="0"
-                android:layout_gravity="center"
-                android:layout_row="0"
-                android:paddingLeft="3dp"
-                android:src="@drawable/ic_launcher"
-                android:visibility="invisible" />
+            android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/detail_text0"
+                android:id="@+id/user_item_name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_gravity="left|center_vertical"
-                android:layout_row="0"
                 android:paddingLeft="4dp"
-                android:visibility="invisible" />
+                android:text="User Name, Age"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
-            <ImageView
-                android:id="@+id/detail_image1"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_column="0"
-                android:layout_gravity="center"
-                android:layout_row="1"
-                android:paddingLeft="3dp"
-                android:src="@drawable/ic_launcher"
-                android:visibility="invisible" />
-
-            <TextView
-                android:id="@+id/detail_text1"
+            <GridLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_gravity="left|center_vertical"
-                android:layout_row="1"
-                android:paddingLeft="4dp"
-                android:visibility="invisible" />
+                android:columnCount="2"
+                android:rowCount="3" >
 
-            <ImageView
-                android:id="@+id/detail_image2"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_column="0"
-                android:layout_gravity="center"
-                android:layout_row="2"
-                android:paddingLeft="3dp"
-                android:src="@drawable/ic_launcher"
-                android:visibility="invisible" />
+                <ImageView
+                    android:id="@+id/detail_image0"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center"
+                    android:layout_row="0"
+                    android:paddingLeft="3dp"
+                    android:src="@drawable/ic_launcher"
+                    android:visibility="invisible" />
 
-            <TextView
-                android:id="@+id/detail_text2"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_gravity="left|center_vertical"
-                android:layout_row="2"
-                android:paddingLeft="4dp"
-                android:visibility="invisible" />
-        </GridLayout>
+                <TextView
+                    android:id="@+id/detail_text0"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_row="0"
+                    android:paddingLeft="4dp"
+                    android:visibility="invisible" />
+
+                <ImageView
+                    android:id="@+id/detail_image1"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center"
+                    android:layout_row="1"
+                    android:paddingLeft="3dp"
+                    android:src="@drawable/ic_launcher"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/detail_text1"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_row="1"
+                    android:paddingLeft="4dp"
+                    android:visibility="invisible" />
+
+                <ImageView
+                    android:id="@+id/detail_image2"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_column="0"
+                    android:layout_gravity="center"
+                    android:layout_row="2"
+                    android:paddingLeft="3dp"
+                    android:src="@drawable/ic_launcher"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/detail_text2"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_row="2"
+                    android:paddingLeft="4dp"
+                    android:visibility="invisible" />
+            </GridLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <TextView
